--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   
   <div style="overflow: hidden; position: relative; width: 1366px; height: 242px;">
     <canvas width="1366" height="242"></canvas>
-    <img src="http://i.lvme.me/sq/pipe1.png" width="148" height="1664" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
-    <img src="http://i.lvme.me/sq/pipe2.png" width="148" height="1664" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
+    <img src="img/pipe1.png" width="148" height="1664" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
+    <img src="img/pipe2.png" width="148" height="1664" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
     <canvas width="1366" height="88" style="position: absolute; z-index: 31337; left: 0px; top: 154px;"></canvas>
     <canvas width="1366" height="256" style="position: absolute; z-index: 60; left: 0px; top: -102px;"></canvas>
     <canvas width="1366" height="216" style="position: absolute; z-index: 61; left: 0px; top: -62px;"></canvas>
-    <img src="http://i.lvme.me/sq/logo.png" style="position: absolute; opacity: 1; z-index: 42069; left: 370px; top: -15px; display: inline;">
-    <img src="http://i.lvme.me/sq/gameover.png" style="position: absolute; opacity: 0; z-index: 42069; left: 370px; top: -91px;">
-    <img src="http://i.lvme.me/sq/clicktostart.png" style="position: absolute; opacity: 1; z-index: 42070; left: 514px; top: 246px; display: inline;">
+    <img src="img/logo.png" style="position: absolute; opacity: 1; z-index: 42069; left: 370px; top: -15px; display: inline;">
+    <img src="img/gameover.png" style="position: absolute; opacity: 0; z-index: 42069; left: 370px; top: -91px;">
+    <img src="img/clicktostart.png" style="position: absolute; opacity: 1; z-index: 42070; left: 514px; top: 246px; display: inline;">
     <div style="width: 800px; height: 24px; position: absolute; text-align: center; font-family: Verdana; font-size: 12px; z-index: 87654; left: 283px; top: 214px;">
       This website is a parody and is not affiliated with Flappy Bird or .GEARS Studios
     </div>
@@ -80,58 +80,58 @@
       <div style="width: 300px; height: 50px; position: absolute; text-align: center; font-family: Verdana; font-weight: bold; font-size: 30px; color: rgb(0, 0, 0); z-index: 88887; -webkit-user-select: none; left: 530px; top: 17px;"></div>
     </div>
     
-    <audio src="http://i.lvme.me/sq/flap.wav"></audio>
-    <audio src="http://i.lvme.me/sq/flap.wav"></audio>
-    <audio src="http://i.lvme.me/sq/flap.wav"></audio>
-    <audio src="http://i.lvme.me/sq/flap.wav"></audio>
-    <audio src="http://i.lvme.me/sq/flap.wav"></audio>
-    <audio src="http://i.lvme.me/sq/slide.wav"></audio>
-    <audio src="http://i.lvme.me/sq/slide.wav"></audio>
-    <audio src="http://i.lvme.me/sq/slide.wav"></audio>
-    <audio src="http://i.lvme.me/sq/clang.wav"></audio>
-    <audio src="http://i.lvme.me/sq/clang.wav"></audio>
-    <audio src="http://i.lvme.me/sq/clang.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/coin4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick3.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick4.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick5.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick5.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick5.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick5.wav"></audio>
-    <audio src="http://i.lvme.me/sq/kick5.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish1.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish1.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish1.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish2.wav"></audio>
-    <audio src="http://i.lvme.me/sq/squish2.wav"></audio> 
+    <audio src="sound/flap.wav"></audio>
+    <audio src="sound/flap.wav"></audio>
+    <audio src="sound/flap.wav"></audio>
+    <audio src="sound/flap.wav"></audio>
+    <audio src="sound/flap.wav"></audio>
+    <audio src="sound/slide.wav"></audio>
+    <audio src="sound/slide.wav"></audio>
+    <audio src="sound/slide.wav"></audio>
+    <audio src="sound/clang.wav"></audio>
+    <audio src="sound/clang.wav"></audio>
+    <audio src="sound/clang.wav"></audio>
+    <audio src="sound/coin.wav"></audio>
+    <audio src="sound/coin.wav"></audio>
+    <audio src="sound/coin.wav"></audio>
+    <audio src="sound/coin2.wav"></audio>
+    <audio src="sound/coin2.wav"></audio>
+    <audio src="sound/coin2.wav"></audio>
+    <audio src="sound/coin3.wav"></audio>
+    <audio src="sound/coin3.wav"></audio>
+    <audio src="sound/coin3.wav"></audio>
+    <audio src="sound/coin4.wav"></audio>
+    <audio src="sound/coin4.wav"></audio>
+    <audio src="sound/coin4.wav"></audio>
+    <audio src="sound/kick.wav"></audio>
+    <audio src="sound/kick.wav"></audio>
+    <audio src="sound/kick.wav"></audio>
+    <audio src="sound/kick.wav"></audio>
+    <audio src="sound/kick.wav"></audio>
+    <audio src="sound/kick2.wav"></audio>
+    <audio src="sound/kick2.wav"></audio>
+    <audio src="sound/kick2.wav"></audio>
+    <audio src="sound/kick2.wav"></audio>
+    <audio src="sound/kick2.wav"></audio>
+    <audio src="sound/kick3.wav"></audio>
+    <audio src="sound/kick3.wav"></audio>
+    <audio src="sound/kick3.wav"></audio>
+    <audio src="sound/kick3.wav"></audio>
+    <audio src="sound/kick3.wav"></audio>
+    <audio src="sound/kick4.wav"></audio>
+    <audio src="sound/kick4.wav"></audio>
+    <audio src="sound/kick4.wav"></audio>
+    <audio src="sound/kick4.wav"></audio>
+    <audio src="sound/kick4.wav"></audio>
+    <audio src="sound/kick5.wav"></audio>
+    <audio src="sound/kick5.wav"></audio>
+    <audio src="sound/kick5.wav"></audio>
+    <audio src="sound/kick5.wav"></audio>
+    <audio src="sound/kick5.wav"></audio>
+    <audio src="sound/squish1.wav"></audio>
+    <audio src="sound/squish1.wav"></audio>
+    <audio src="sound/squish1.wav"></audio>
+    <audio src="sound/squish2.wav"></audio>
+    <audio src="sound/squish2.wav"></audio>
+    <audio src="sound/squish2.wav"></audio> 
 
