--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <img src="img/pipe1.png" width="148" height="1664" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
       <img src="img/pipe2.png" width="148" height="1664" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
       <canvas class="unselectable" width="1366" height="88" style="position: absolute; z-index: 31337; left: 0px; top: 154px;"></canvas>
-      <canvas width="1366" height="256" style="position: absolute; z-index: 60; left: 0px; top: -102px;"></canvas>
-      <canvas width="1366" height="216" style="position: absolute; z-index: 61; left: 0px; top: -62px;"></canvas>
+      <canvas class="unselectable" width="1366" height="256" style="position: absolute; z-index: 60; left: 0px; top: -102px;"></canvas>
+      <canvas class="unselectable" width="1366" height="216" style="position: absolute; z-index: 61; left: 0px; top: -62px;"></canvas>
       <img src="img/logo.png" style="position: absolute; opacity: 1; z-index: 42069; left: 370px; top: -15px; display: inline;">
       <img src="img/gameover.png" style="position: absolute; opacity: 0; z-index: 42069; left: 370px; top: -91px;">
       <img src="img/clicktostart.png" style="position: absolute; opacity: 1; z-index: 42070; left: 514px; top: 246px; display: inline;">
