Updated pipes to calipers
Replaced pipes with calipers, made the dial movable as well.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div style="overflow: hidden; position: relative; width: 1366px; height: 242px;">
       <canvas width="1366" height="242"></canvas>
-      <img src="img/pipe1.png" width="148" height="1664" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
-      <img src="img/pipe2.png" width="148" height="1664" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
+      <img src="img/Caliper1.png" width="148" height="437" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
+      <img src="img/Caliper2.png" width="148" height="437" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
       <canvas class="unselectable" width="1366" height="88" style="position: absolute; z-index: 31337; left: 0px; top: 154px;"></canvas>
       <canvas class="unselectable" width="1366" height="256" style="position: absolute; z-index: 60; left: 0px; top: -102px;"></canvas>
       <canvas class="unselectable" width="1366" height="216" style="position: absolute; z-index: 61; left: 0px; top: -62px;"></canvas>
