--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Squishy Eno</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="description" content="Do you HATE that freakin' Eno? Do you have nightmares about that stupid bird's face every night? Get revenge NOW by squishing him in Squishy Eno.">
-    <meta property="og:description" content="Do you HATE that freakin' Eno? Do you have nightmares about that stupid Eno's face every night? Get revenge NOW by squishing him in Squishy Eno.">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Squishy Eno">
-    <meta property="og:url" content="http://eshsprogramming.github.io/squishy-eno/">
-    <meta property="og:site_name" content="Squishy Eno">
-    <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=610, height=1024">
-    
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Do you HATE that freakin' Eno? Do you have nightmares about that stupid bird's face every night? Get revenge NOW by squishing him in Squishy Eno." />
+    <meta property="og:description" content="Do you HATE that freakin' Eno? Do you have nightmares about that stupid Eno's face every night? Get revenge NOW by squishing him in Squishy Eno." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Squishy Eno" />
+    <meta property="og:url" content="http://eshsprogramming.github.io/squishy-eno/" />
+    <meta property="og:site_name" content="Squishy Eno" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=610, height=1024" />
+    <link rel="image_src" href="http://squishybird.com/img/angrybird1.img" />
     <style>
       .unselectable {
         -moz-user-select: -moz-none;
@@ -21,23 +21,17 @@
     </style>
   </head>
   <body style="margin: 0px; overflow: hidden;" cz-shortcut-listen="true">
-    <div id="lgd" style="width: 300px; height: 64px; position: absolute; left: 533px; top: 301px; font-family: Verdana; font-size: 16px; font-weight: bold; text-align: center;">Loading...</div>
+    <div id="lgd" style="width: 300px; height: 64px; position: absolute;"></div>
+     <script type='text/javascript'>
+     var lgdiv = document.getElementById('lgd');
+     lgdiv.style.left = Math.floor((window.innerWidth - 300)/2)+'px';
+     lgdiv.style.top = Math.floor((window.innerHeight - 64)/2)+'px';
+     lgdiv.style.fontFamily = 'Verdana';
+     lgdiv.style.fontSize = '16px';
+     lgdiv.style.fontWeight = 'bold';
+     lgdiv.style.textAlign = 'center';
+     lgdiv.innerHTML = 'Loading...';
+     </script>
     <script type="text/javascript" src="squishyeno.js"></script>
-    <!--
-    <div style="overflow: hidden; position: relative; width: 1366px; height: 242px;">
-      <canvas width="1366" height="242"></canvas>
-      <img src="img/Caliper1.png" width="148" height="437" style="position: absolute; left: 609px; top: -1722px; z-index: 420;">
-      <img src="img/Caliper2.png" width="148" height="437" style="position: absolute; left: 609px; top: 212px; z-index: 420;">
-      <canvas class="unselectable" width="1366" height="88" style="position: absolute; z-index: 31337; left: 0px; top: 154px;"></canvas>
-      <canvas class="unselectable" width="1366" height="256" style="position: absolute; z-index: 60; left: 0px; top: -102px;"></canvas>
-      <canvas class="unselectable" width="1366" height="216" style="position: absolute; z-index: 61; left: 0px; top: -62px;"></canvas>
-      <img src="img/logo.png" style="position: absolute; opacity: 1; z-index: 42069; left: 370px; top: -15px; display: inline;">
-      <img src="img/gameover.png" style="position: absolute; opacity: 0; z-index: 42069; left: 370px; top: -91px;">
-      <img src="img/clicktostart.png" style="position: absolute; opacity: 1; z-index: 42070; left: 514px; top: 246px; display: inline;">
-      <div style="width: 800px; height: 24px; position: absolute; text-align: center; font-family: Verdana; font-size: 12px; z-index: 87654; left: 283px; top: 214px;">
-        This website is a parody and is not affiliated with Flappy Bird or .GEARS Studios
-      </div>
-      -->
-    </div>
   </body>
 </html>
