Add title/favorites icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta property="og:url" content="http://eshsprogramming.github.io/squishy-eno/" />
     <meta property="og:site_name" content="Squishy Eno" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=610, height=1024" />
-    <link rel="image_src" href="http://squishybird.com/img/angrybird1.img" />
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="SHORTCUT ICON" href="img/favicon.png" />
     <style>
       .unselectable {
         -moz-user-select: -moz-none;
